Bringing letters to the center of the squares

--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -1,4 +1,4 @@
-.body {
+body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,20 +6,19 @@
     background: #f0f0f0;
 }
 .square {
+    display: flex;
+    justify-content: center;
+    align-items: center;    
     width: 100px;
     height: 100px;
     background: red;
-    border: 2px solid black;
-    margin: 5px;
+}
+.square:hover{
+    background: yellow;
 }
 .greedy{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-}
-.OriginalSquare{
-    width: 200px;
-    height: 200px;
-    background: blue;
-    border: 2px solid black;
-    margin: 5px;
+    background: black;
+    gap: 5px;
 }
