--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -9,8 +9,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;    
-    width: 100px;
-    height: 100px;
+    width: 10vw;
+    height: 10vw;
     background: red;
 }
 .square:hover{
@@ -19,8 +19,9 @@ body {
 .greedy{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    background: black;
+    background: rgb(73, 73, 73);
     gap: 5px;
+    border: 5px solid black;
 }
 .score{
     position: fixed;
@@ -41,4 +42,9 @@ body {
     padding: 6px 10px;
     background: rgba(255,255,255,0.9);
     border-radius: 6px;
+}
+.image{
+    height: 50px;
+    width: 50px;
+    display: none;
 }
